
                CHANGES IN party VERSION 1.0-6 (2013-01-09)

    o    use hist()$density instead of hist()$Intensities as 
         reported by R 3.0.0 to be


                CHANGES IN party VERSION 1.0-5 (2013-01-07)

    o    fix class problem reported by R 3.0.0 to be


                CHANGES IN party VERSION 1.0-4 (2012-12-18)

    o    export varimpAUC()

    o    add where() method for RandomForest class


                CHANGES IN party VERSION 1.0-3 (2012-09-26)

    o    new function varimpAUC() for AUC-based variable importance measures

    o    the `weights' argument in cforest() can now be used to define
         alternative case weights for each of the trees in the forest.


                CHANGES IN party VERSION 1.0-2 (2012-04-26)

    o    version 1.0-0 introduced a new bug in plotting Kaplan-Meier curves
         when fixing the weight problem in survfit; the x-axis labels where
         incorrect. Spotted by Sarah Vowler <Sarah.Vowler@cancer.org.uk>.


                CHANGES IN party VERSION 1.0-1 (2012-03-23)

    o    fix -Werror warnings suggested by Murray Stokely <mstokely@google.com>

    o    make sure no factor variables are evaluated as surrogate split

    o    fix confusing warning messages in varimp and check
         for non-unity weights


                CHANGES IN party VERSION 1.0-0 (2012-02-17)

    o    varimp can now partially deal with missing values

    o    Kaplan-Meier curves are now computed _after_ removing
         zero case weights (see comment in ?survfit); plots may change
         slightly.

    o    use cforest_unbiased instead of cforest_control/cforest_classical
         in examples and regression tests


                CHANGES IN party VERSION 0.9-99996 (2011-12-20)

    o    don't ship doxygen documentation with package

    o    ctree() and cforest() don't handle `-' in formulae,
         warning added to Rd files


                CHANGES IN party VERSION 0.9-99995 (2011-10-27)
