@@ -168,7 +168,8 @@ ctreedpp <- function(formula, data = list(), subset = NULL,
     if (any(is.na(response)))
         stop("missing values in response variable not allowed")
 
-    resp <- initVariableFrame(response, trafo = ytrafo, response = TRUE)
+    resp <- initVariableFrame(response, trafo = ytrafo, response = TRUE,
+                              scores = scores)
 
     RET <- new("LearningSampleFormula", inputs = inp, responses = resp,
                weights = rep(1, inp@nobs), nobs = inp@nobs,
