@@ -1,8 +1,7 @@
 
-R Under development (unstable) (2013-01-06 r61571) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-05-16 r62756) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-Platform: i686-pc-linux-gnu (32-bit)
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -43,7 +42,7 @@ Loading required package: vcd
 Loading required package: MASS
 Loading required package: colorspace
 > 
-> assign(".oldSearch", search(), pos = 'CheckExEnv')
+> base::assign(".oldSearch", base::search(), pos = 'CheckExEnv')
 > cleanEx()
 > nameEx("BinaryTree-class")
 > ### * BinaryTree-class
@@ -291,7 +290,6 @@ Loading required package: rpart
 Loading required package: nnet
 Loading required package: class
 Loading required package: prodlim
-Loading required package: KernSmooth
 KernSmooth 2.23 loaded
 Copyright M. P. Wand 1997-2009
 1) pnodes <= 3; criterion = 1, statistic = 37.638
@@ -414,8 +412,8 @@ Copyright M. P. Wand 1997-2009
 > graphics::par(get("par.postscript", pos = 'CheckExEnv'))
 > cleanEx()
 
-detaching ‘package:ipred’, ‘package:prodlim’, ‘package:KernSmooth’,
-  ‘package:class’, ‘package:nnet’, ‘package:rpart’
+detaching ‘package:ipred’, ‘package:prodlim’, ‘package:class’,
+  ‘package:nnet’, ‘package:rpart’
 
 > nameEx("ctree")
 > ### * ctree
@@ -544,7 +542,6 @@ Loading required package: rpart
 Loading required package: nnet
 Loading required package: class
 Loading required package: prodlim
-Loading required package: KernSmooth
 [[1]]
 records   n.max n.start  events  median 0.95LCL 0.95UCL 
     248     248     248      88    2093    1814      NA 
@@ -577,8 +574,8 @@ records   n.max n.start  events  median 0.95LCL 0.95UCL
 > 
 > cleanEx()
 
-detaching ‘package:ipred’, ‘package:prodlim’, ‘package:KernSmooth’,
-  ‘package:class’, ‘package:nnet’, ‘package:rpart’
+detaching ‘package:ipred’, ‘package:prodlim’, ‘package:class’,
+  ‘package:nnet’, ‘package:rpart’
 
 > nameEx("ctree_memory")
 > ### * ctree_memory
@@ -817,15 +814,14 @@ Loading required package: rpart
 Loading required package: nnet
 Loading required package: class
 Loading required package: prodlim
-Loading required package: KernSmooth
 > 
 > 
 > 
 > 
 > cleanEx()
 
-detaching ‘package:ipred’, ‘package:prodlim’, ‘package:KernSmooth’,
-  ‘package:class’, ‘package:nnet’, ‘package:rpart’
+detaching ‘package:ipred’, ‘package:prodlim’, ‘package:class’,
+  ‘package:nnet’, ‘package:rpart’
 
 > nameEx("plot.mob")
 > ### * plot.mob
@@ -1006,8 +1002,9 @@ nativeSpeaker           age      shoeSize
 > 
 > ### * <FOOTER>
 > ###
-> cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  21.433 0.272 21.738 0 0 
+> options(digits = 7L)
+> base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
+Time elapsed:  16.453 0.664 17.162 0 0 
 > grDevices::dev.off()
 null device 
           1 
