@@ -1,4 +1,11 @@
 
+                CHANGES IN party VERSION 1.0-7 (2013-05-31)
+
+    o    ctree and cforest ignored the scores argument for the
+         response. Spotted and fixed by Silke Janitza 
+         <janitza@ibe.med.uni-muenchen.de>.
+
+
                 CHANGES IN party VERSION 1.0-6 (2013-01-09)
 
     o    use hist()$density instead of hist()$Intensities as 
